crates/codira_codegen/src/snapshots/codira_codegen__test__assignment_op_f32.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func assign(a: f32, b: f32) -> f32 {\n        a = b;\n        a\n    }\n    public func assign_add(a: f32, b: f32) -> f32 {\n        a += b;\n        a\n    }\n    public func assign_subtract(a: f32, b: f32) -> f32 {\n        a -= b;\n        a\n    }\n    public func assign_multiply(a: f32, b: f32) -> f32 {\n        a *= b;\n        a\n    }\n    public func assign_divide(a: f32, b: f32) -> f32 {\n        a /= b;\n        a\n    }\n    public func assign_remainder(a: f32, b: f32) -> f32 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define float @assign(float %0, float returned %1) local_unnamed_addr #0 {
body:
  ret float %1
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define float @assign_add(float %0, float %1) local_unnamed_addr #0 {
body:
  %add = fadd float %0, %1
  ret float %add
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define float @assign_subtract(float %0, float %1) local_unnamed_addr #0 {
body:
  %sub = fsub float %0, %1
  ret float %sub
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define float @assign_multiply(float %0, float %1) local_unnamed_addr #0 {
body:
  %mul = fmul float %0, %1
  ret float %mul
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define float @assign_divide(float %0, float %1) local_unnamed_addr #0 {
body:
  %div = fdiv float %0, %1
  ret float %div
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define float @assign_remainder(float %0, float %1) local_unnamed_addr #0 {
body:
  %rem = frem float %0, %1
  ret float %rem
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
