crates/codira_codegen/src/snapshots/codira_codegen__test__assignment_op_i128.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func assign(a: i128, b: i128) -> i128 {\n        a = b;\n        a\n    }\n    public func assign_add(a: i128, b: i128) -> i128 {\n        a += b;\n        a\n    }\n    public func assign_subtract(a: i128, b: i128) -> i128 {\n        a -= b;\n        a\n    }\n    public func assign_multiply(a: i128, b: i128) -> i128 {\n        a *= b;\n        a\n    }\n    public func assign_divide(a: i128, b: i128) -> i128 {\n        a /= b;\n        a\n    }\n    public func assign_remainder(a: i128, b: i128) -> i128 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i128 @assign(i128 %0, i128 returned %1) local_unnamed_addr #0 {
body:
  ret i128 %1
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i128 @assign_add(i128 %0, i128 %1) local_unnamed_addr #0 {
body:
  %add = add i128 %1, %0
  ret i128 %add
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i128 @assign_subtract(i128 %0, i128 %1) local_unnamed_addr #0 {
body:
  %sub = sub i128 %0, %1
  ret i128 %sub
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i128 @assign_multiply(i128 %0, i128 %1) local_unnamed_addr #0 {
body:
  %mul = mul i128 %1, %0
  ret i128 %mul
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i128 @assign_divide(i128 %0, i128 %1) local_unnamed_addr #0 {
body:
  %div = sdiv i128 %0, %1
  ret i128 %div
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define range(i128 -170141183460469231731687303715884105727, -170141183460469231731687303715884105728) i128 @assign_remainder(i128 %0, i128 %1) local_unnamed_addr #0 {
body:
  %rem = srem i128 %0, %1
  ret i128 %rem
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
