crates/codira_codegen/src/snapshots/codira_codegen__test__assignment_op_i64.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func assign(a: i64, b: i64) -> i64 {\n        a = b;\n        a\n    }\n    public func assign_add(a: i64, b: i64) -> i64 {\n        a += b;\n        a\n    }\n    public func assign_subtract(a: i64, b: i64) -> i64 {\n        a -= b;\n        a\n    }\n    public func assign_multiply(a: i64, b: i64) -> i64 {\n        a *= b;\n        a\n    }\n    public func assign_divide(a: i64, b: i64) -> i64 {\n        a /= b;\n        a\n    }\n    public func assign_remainder(a: i64, b: i64) -> i64 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @assign(i64 %0, i64 returned %1) local_unnamed_addr #0 {
body:
  ret i64 %1
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @assign_add(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %add = add i64 %1, %0
  ret i64 %add
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @assign_subtract(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %sub = sub i64 %0, %1
  ret i64 %sub
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @assign_multiply(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %mul = mul i64 %1, %0
  ret i64 %mul
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @assign_divide(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %div = sdiv i64 %0, %1
  ret i64 %div
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define range(i64 -9223372036854775807, -9223372036854775808) i64 @assign_remainder(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %rem = srem i64 %0, %1
  ret i64 %rem
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
